@@ -1087,7 +1087,7 @@ void EU3World::convertArmies(const inverseProvinceMapping inverseProvinceMap)
 {
 	for (map<string, EU3Country*>::iterator countryItr = countries.begin(); countryItr != countries.end(); countryItr++)
 	{
-		countryItr->second->convertArmies(inverseProvinceMap, provinces);
+		countryItr->second->convertArmiesandNavies(inverseProvinceMap, provinces);
 	}
 }
 
